--- a/css/search_suggestions.css
+++ b/css/search_suggestions.css
@@ -51,40 +51,6 @@ form.comment > .fa-magnifying-glass, form.comment > .fa-plus {
     pointer-events: none;
 }
 
-form.caption {
-    display: flex;
-    width: -webkit-fill-available;
-    flex-direction: column;
-    margin: 1rem -0.5rem;
-    border-top: 1px solid white;
-}
-
-form.caption > textarea {
-    background-color: #323232;
-    border: none;
-    margin: 1rem;
-    font-size: 1em;
-    resize: none;
-}
-
-form.caption > input[type=submit] {
-    background-color: #1D70AD;
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    border: none;
-    color: white;
-    padding: 0.7rem;
-    margin: 1rem;
-    align-self: end;
-    font-size: 1em;
-}
-
-#track-search-form.caption > textarea:focus, form.caption > textarea:focus {
-    outline: none;
-}
-
-/*This code deals with the search suggestion */
 .track-suggestions-section {
     background-color: white;
     min-width: 0;
@@ -127,4 +93,3 @@ ul.track-suggestions >li > p {
     aspect-ratio: 1 / 1;
     margin: 0 0.3rem;
 }
-/*Here ends the code that deals with the search suggestion */
